--- a/package.json
+++ b/package.json
@@ -14,5 +14,14 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "bootstrap": "^5.3.0",
+        "datatables.net-autofill-bs5": "^2.7.0",
+        "datatables.net-bs5": "^2.2.2",
+        "datatables.net-buttons-bs5": "^3.2.2",
+        "datatables.net-responsive-bs5": "^3.0.4",
+        "jszip": "^3.10.1",
+        "pdfmake": "^0.2.18"
     }
 }
