--- a/package.json
+++ b/package.json
@@ -8,19 +8,22 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "alpinejs": "^3.4.2",
-        "autoprefixer": "^10.4.2",
+        "autoprefixer": "^10.4.21",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
-        "postcss": "^8.4.31",
-        "tailwindcss": "^3.1.0",
+        "postcss": "^8.5.3",
+        "tailwindcss": "^3.4.17",
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "@tailwindcss/vite": "^4.1.4",
         "bootstrap": "^5.3.0",
         "datatables.net-autofill-bs5": "^2.7.0",
         "datatables.net-bs5": "^2.2.2",
         "datatables.net-buttons-bs5": "^3.2.2",
         "datatables.net-responsive-bs5": "^3.0.4",
+        "fullcalendar": "^6.1.17",
+        "fullcalendar-scheduler": "^6.1.17",
         "jszip": "^3.10.1",
         "pdfmake": "^0.2.18"
     }
