--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
+        "@tailwindcss/postcss": "^4.1.7",
+        "@vitejs/plugin-vue": "^5.2.4",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.21",
         "axios": "^1.6.4",
+        "jiti": "^2.4.2",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.5.3",
-        "tailwindcss": "^3.4.17",
         "vite": "^5.0.0"
     },
     "dependencies": {
-        "@tailwindcss/vite": "^4.1.4",
         "bootstrap": "^5.3.0",
         "datatables.net-autofill-bs5": "^2.7.0",
         "datatables.net-bs5": "^2.2.2",
@@ -25,6 +26,7 @@
         "fullcalendar": "^6.1.17",
         "fullcalendar-scheduler": "^6.1.17",
         "jszip": "^3.10.1",
-        "pdfmake": "^0.2.18"
+        "pdfmake": "^0.2.18",
+        "tailwindcss": "^4.1.4"
     }
 }
